tests/baselines/reference/interfacePropertiesWithSameName3.errors.txt
interfacePropertiesWithSameName3.ts(3,11): error TS2320: Interface 'F' cannot simultaneously extend types 'E' and 'D'.
  Named property 'a' of types 'E' and 'D' are not identical.
interfacePropertiesWithSameName3.ts(5,12): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
interfacePropertiesWithSameName3.ts(6,12): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
interfacePropertiesWithSameName3.ts(7,11): error TS2320: Interface 'F2' cannot simultaneously extend types 'E2' and 'D2'.
  Named property 'a' of types 'E2' and 'D2' are not identical.


==== interfacePropertiesWithSameName3.ts (4 errors) ====
    interface D { a: number; }
    interface E { a: string; }
    interface F extends E, D { } // error
              ~
!!! error TS2320: Interface 'F' cannot simultaneously extend types 'E' and 'D'.
!!! error TS2320:   Named property 'a' of types 'E' and 'D' are not identical.
    
    class D2 { a: number; }
               ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
    class E2 { a: string; }
               ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
    interface F2 extends E2, D2 { } // error
              ~~
!!! error TS2320: Interface 'F2' cannot simultaneously extend types 'E2' and 'D2'.
!!! error TS2320:   Named property 'a' of types 'E2' and 'D2' are not identical.
    